Fixed profile page spacing

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -14,6 +14,9 @@ h5,
 h6 {
   font-family: "Anton", sans-serif;
 }
+nav {
+  z-index: 1;
+}
 body {
   height: 100vh;
 }
